--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ MESSAGE("Build type: " ${CMAKE_BUILD_TYPE})
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DREGISTER_TIMES")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_SOFTWARE_")
 add_definitions(-w)
 
 set(CMAKE_CXX_STANDARD 14)
